finalizing the treatment

--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -144,7 +144,7 @@
 
 
         <tr>
-            <td> <b>Leftover Tokens</b> </td>
+            <td> <b>Leftover Units</b> </td>
             <td> </td>
             <td> </td>
             <td> <input type="range" oninput = "update_value(tokens_slider,tokens_form)" min="0" max="100" step="1" value="100" id="tokens_slider" name="tokens"> </td>
