--- a/_static/templates/Complex_InstructionsPage1.html
+++ b/_static/templates/Complex_InstructionsPage1.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Instructions (Page 1 out of 3)
+Instructions I (Block {{block_number}} out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -10,7 +10,7 @@ Instructions (Page 1 out of 3)
     <div class="card-body">
         <font size="4">
 
-In this experiment, you will make five decisions. In each of these decisions, you will distribute 100 tokens among six investment options. At the end of the experiment, one of the decisions will be randomly chosen and it will determine your payment.
+In this block, you will make five decisions. In each of these decisions, you will distribute 100 units among six investment options. At the end of the experiment, one of the decisions will be randomly chosen and it will determine your payment.
 
 <br><br>
 
