--- a/_static/templates/Complex_InstructionsPage2.html
+++ b/_static/templates/Complex_InstructionsPage2.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Instructions (Page 2 out of 3)
+Instructions II (Block {{block_number}} out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -10,7 +10,8 @@ Instructions (Page 2 out of 3)
     <div class="card-body">
       <font size="4">
 
-Your overall payoff will depend on how many tokens you choose to allocate to each option, and also on the outcome of the coin flip. In the example below, if you choose to invest all 100 tokens in Option 1, then you would receive 100*100 = 10000 tokens if the coin comes up Heads, and would receive 0 tokens if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 tokens if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 tokens if the coin comes up Tails.
+Your overall payoff will depend on how many units you choose to allocate to each option, and also on the outcome of a virtual coin flip. 
+In the example below, if you choose to invest all 100 units in Option 1, then you would receive 100*100 = 10000 tokens if the coin comes up Heads, and would receive 0 units if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 units if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 units if the coin comes up Tails.
 
 <br>
 <br>
@@ -20,7 +21,7 @@ Your overall payoff will depend on how many tokens you choose to allocate to eac
 <br>
 <br>
 
-The exchange rate is 1000 tokens per £1. That is a payment of 10000 tokens means that you would get £10, while for 4000 tokens you would get £4, and for 1200 tokens you would get £1.2 (= 1 pound and 20 pence).
+The exchange rate is 100 units  per 1 token.
 
       </font>
     </div>
