--- a/_static/templates/Complex_InstructionsPage3.html
+++ b/_static/templates/Complex_InstructionsPage3.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Instructions (Page 3 out of 3)
+Instructions III (Block {{block_number}} out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -10,11 +10,11 @@ Instructions (Page 3 out of 3)
     <div class="card-body">
       <font size="4">
 
-To distribute your 100 tokens, use your mouse to move the blue bars in the fourth column, or use the -/+ buttons in the last column. The number of tokens is shown in the last column between those buttons. If you want to start over on the distribution, just click the <b>"Reset"</b> button. 
+To distribute your 100 units, use your mouse to move the blue bars in the fourth column, or use the -/+ buttons in the last column. If you want to start over, just click the <b>"Reset"</b> button. 
 
 <br><br>
 
-To finalize your distribution, first check that you have distributed all 100 tokens. (To avoid unnecessary waste, the program will not let you proceed if there are leftover tokens.) Then click the <b>"Submit"</b> button and, if there are no leftover tokens, a <b>"Next"</b> button will appear. Clicking it will finalize your distribution on that task. 
+To finalize your distribution, first check that you have distributed all 100 units. (To avoid unnecessary waste, the program will not let you proceed if there are leftover units.) Then click the <b>"Submit"</b> button and, if there are no leftover units, a <b>"Next"</b> button will appear. Clicking it will finalize your distribution on that task. 
 
 
 <br>
