--- a/_static/templates/Simple_Instructions.html
+++ b/_static/templates/Simple_Instructions.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Instructions 
+Instructions (Block {{block_number}} out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -9,7 +9,7 @@ Instructions
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-In this experiment, you will make five decisions. In each of these decisions, you will choose one of six investment options. 
+In this block, you will make five decisions. In each of these decisions, you will choose one of six investment options. 
 
 <br><br>
 
@@ -20,8 +20,6 @@ The table on the decision screen shows how the payoff of each option depends on 
 In the example decision below, if you choose Option 1, then you will receive 10 tokens if the coin comes up Heads, and will receive 70 tokens if the coin comes up Tails. 
 If, for instance, you choose Option 3, then you will receive 20 tokens if the coin comes up Heads, and 40 tokens if Tails.
 If, for instance, you choose Option 6, then you will receive 3 tokens if the coin comes up Heads, and 91 tokens if Tails.
-
-
 
 <br>
 <br>
