--- a/_static/templates/Trivial_Instructions.html
+++ b/_static/templates/Trivial_Instructions.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Instructions 
+Instructions (Block {{block_number}} out of 3)
 </div>
 {{ endblock }}
 {{ block content }}
@@ -9,7 +9,7 @@ Instructions
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-In this experiment, you will make five decisions. In each of these decisions, you will choose one of two investment options. 
+In this block, you will make five decisions. In each of these decisions, you will choose one of two investment options. 
 
 <br><br>
 
@@ -28,7 +28,7 @@ In the example decision below, if you choose Option 1, then you will receive 100
 <br>
 <br>
 
-Tokens are converted to pounds in the end of the experiment at the rate of 20 tokens per £1. Once you made the choice, please click the "Next" button.
+Once you made the choice, please click the "Next" button.
       </font>
 </div>
 </div>
