finalizing the within subject design

--- a/_static/templates/Complex_Question1.html
+++ b/_static/templates/Complex_Question1.html
@@ -62,7 +62,14 @@ Question 1
     </tr>
     <tr>
         <td> Exchange Rate</td>
-        <td> 1000 units per £1 </td>
+        <td> 100 units per 1 token </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr>
+    <tr>
+        <td> Exchange Rate</td>
+        <td> 20 tokens per £1 </td>
         <td> </td>
         <td> </td>
         <td> </td>
@@ -75,7 +82,7 @@ Question 1
     </tr>
     <tr>
         <td> 
-            <input id="question1" type="radio" name="complex_question_1" value="1" required> &nbsp; (10*20 + 10*40 + 20*40)/1000 = 1.4
+            <input id="question1" type="radio" name="complex_question_1" value="1" required> &nbsp; (10*20 + 10*40 + 20*40)/100 = 14
         </td>
     </tr>
     <tr>
@@ -90,7 +97,7 @@ Question 1
     </tr>
     <tr>
         <td> 
-            <input id="question1" type="radio" name="complex_question_1" value="4" required> &nbsp; 70*20 + 50*40 + 40*40 = 5000
+            <input id="question1" type="radio" name="complex_question_1" value="4" required> &nbsp; (70*20 + 50*40 + 40*40)/2000 = 2.5
         </td>
     </tr>
 </table>
