--- a/_static/templates/NoDelegation_Results.html
+++ b/_static/templates/NoDelegation_Results.html
@@ -9,20 +9,32 @@
 <font size="4">
 <table class="table">
     <tr>
-        <td> Payment Block </td>
+        <td> Payment block </td>
         <td> {{payment_block}}</td>
     </tr>
-    <tr>
-        <td> Payment Task </td>
+    <tr style="border-bottom:2pt solid black;">
+         <td> TREATMENT </td>
         <td> {{player.treatment_index}}</td>
     </tr>
     <tr>
-        <td> Payment Rounds </td>
+        <td> Payment rounds </td>
         <td> {{first_payment_round}} and {{second_payment_round}}</td>
     </tr>
+     <tr>
+        <td> Payoff for round {{first_payment_round}}  </td>
+        <td> <b> {{player.earnings_period_one}}</b> </td>
+    </tr>
+    <tr style="border-bottom:2pt solid black;">
+        <td> Payoff for round {{second_payment_round}} </td>
+        <td> <b> {{player.earnings_period_two}}</b> </td>
+    </tr>
     <tr>
-        <td> Payoff </td>
-        <td> {{player.payoff}}</td>
+        <td> Total variable payoff </td>
+        <td> <b>{{player.payoff}} </b></td>
+    </tr>
+    <tr>
+        <td> Participation fee </td>
+        <td> <b>{{paricipation_fee}} </b></td>
     </tr>
 </table>
 </font>
