--- a/_static/templates/Complex_Question2.html
+++ b/_static/templates/Complex_Question2.html
@@ -62,7 +62,14 @@ Question 2
     </tr>
     <tr>
         <td> Exchange Rate</td>
-        <td> 1000 units per  £1 </td>
+        <td> 100 units per 1 token </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr>
+    <tr>
+        <td> Exchange Rate</td>
+        <td> 20 tokens per £1 </td>
         <td> </td>
         <td> </td>
         <td> </td>
@@ -75,12 +82,12 @@ Question 2
     </tr>
     <tr>
         <td> 
-            <input id="question2" type="radio" name="complex_question_2" value="1" required> &nbsp; (10*40 + 100*60)/1000 = 6.4
+            <input id="question2" type="radio" name="complex_question_2" value="1" required> &nbsp; (10*40 + 100*60)/20 = 320
         </td>
     </tr>
     <tr>
         <td> 
-            <input id="question2" type="radio" name="complex_question_2" value="2" required> &nbsp; (50*40 + 100*60)/1000 = 8
+            <input id="question2" type="radio" name="complex_question_2" value="2" required> &nbsp; (50*40 + 100*60)/2000 = 4
         </td>
     </tr>
     <tr>
