including the return link

--- a/_static/templates/NoDelegation_Results.html
+++ b/_static/templates/NoDelegation_Results.html
@@ -32,6 +32,13 @@
         <td> Participation fee </td>
         <td> <b>{{paricipation_fee}} </b></td>
     </tr>
+    <tr style="border-bottom:2pt solid black;">
+        <td> Please click the link to complete the study </td>
+        <td> <b> <a href="https://app.prolific.co/submissions/complete?cc=6E1B1776">Complete</a> </b> </td>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+    </tr>
 </table>
 </font>
 {{ endblock }}
