adding reference to extra round

--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -173,6 +173,21 @@
 
 <br><br><br><br>
 
+{% if residual == 0 %}
+
+<div class="card bg-light">
+<font size="4">
+    <div class="card-body">
+    Note that chance that this round will be chosen for payment is higher than usual (1 out of 3).
+</div>
+</font>
+</div>
+
+{% endif %}
+
+
+<br><br>
+
 
 <script>
     var flag =0;
