--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-Block 2: Instructions
+Instructions: Delegation
 </div>
 {{ endblock }}
 {{ block content }}
@@ -18,20 +18,20 @@ We will also provide you with a list of subjects who have previously player this
 
 <br><br>
 
-<b>Payments</b> is the payment player received after participation in the experiment.
-Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject in one out of five decision rounds. 
+<b>Payment</b> is the payment player received after participation in the experiment.
+Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject and the random choice of the block and rounds for payment. 
 
 <br>
 <br>
 
-<b>Risk rating</b> is the level of risk subjects took in their choices. Risk ratings take the values of A, B, C, and D, where A corresponds to the least risky choice and D to the most risky choice. 
+<b>Risk rating</b> is the level of risk subjects took in their choices. Risk ratings correspond to the <b> High, Medium, and Low </b> levels.
+
 
 <br>
 <br>
 
 <b>Quality rating</b> indicates the “efficiency” of the player's choices.
-Quality rating measures whether it was possible to spend the endowment in a more efficient manner.
-That is, the higher is the rating the smaller is potential amount of cash value wasted while taking the decision.
+Quality of decisions classified as <b> High </b> and <b> Low </b>.
 
 
 <br>
