working over the new treatment

--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,7 +9,8 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You will now be given the option to either perform the task on your own as in the previous four rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in their round six. 
+You will now be given the option to either perform the task on your own as in the previous four rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in the round to be faced of the corresponding block. 
+Recall that the last round of each block is paid with certainty if this block is chosen for payment.
 
 <br><br>
 
