finalizng the treatment

--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,30 +9,26 @@ Instructions: Delegation
 <div class="card bg-light">
     <div class="card-body">
 
-You will now be given the option to either perform the task on your own as in the previous four rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in the round to be faced of the corresponding block. 
-Recall that the last round of each block is paid with certainty if this block is chosen for payment.
+You now can select a previous investor and delegate the task to them, or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
 
 <br><br>
 
-The screen contains information about the decision you would need to take if you decide to proceed on your own.
-We will also provide you with a list of subjects who have previously player this game. To make the best possible decision we will also provide you with information on their investment choices in the previous five rounds. 
+As usual, your screen will display information you will need if you decide to make your own choices. It will also display a list of five investors who have previously played this game. The display also tells you something about each of those previous investors: the final payments they received, their risk ratings and their quality ratings.
 
 <br><br>
 
-<b>Payment</b> is the payment player received after participation in the experiment.
-Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject and the random choice of the block and rounds for payment. 
+<b>Their final payments</b>, like yours, come from a single randomly chosen round. Please note that it is often from a different round than that for which you delegate.
 
 <br>
 <br>
 
-<b>Risk rating</b> is the level of risk subjects took in their choices. Risk ratings correspond to the <b> High, Medium, and Low </b> levels.
+<b>Their risk rating</b> --- High, Medium, or Low --- is based on all their choices during their session. High risk rating means they often made choices that result in a very high payment in one state and a very low payment in the other state, while low risk rating indicates mostly choices that give a moderate payout no matter what the state turns out to be.
 
 
 <br>
 <br>
 
-<b>Quality rating</b> indicates the “efficiency” of the player's choices.
-Quality of decisions classified as <b> High </b> and <b> Low </b>.
+<b>Their quality rating</b> --- High or Low  --- indicates the “efficiency” of the investor's choices. A low rating indicates that they often could have obtained higher payments in both states if they had made different choices.  
 
 
 <br>
