--- a/_static/templates/Simple_Instructions.html
+++ b/_static/templates/Simple_Instructions.html
@@ -9,7 +9,7 @@ Instructions (Block {{block_number}} out of 3)
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-In this block, you will make five decisions. In each of these decisions, you will choose one of six investment options. 
+In this block, you will make five decisions. In each of these decisions, you will choose one of six investment options.
 
 <br><br>
 
@@ -17,9 +17,7 @@ The table on the decision screen shows how the payoff of each option depends on 
 
 <br><br>
 
-In the example decision below, if you choose Option 1, then you will receive 55 tokens if the coin comes up Heads, and will receive 15 tokens if the coin comes up Tails. 
-If, for instance, you choose Option 3, then you will receive 40 tokens if the coin comes up Heads, and 30 tokens if Tails.
-If, for instance, you choose Option 4, then you will receive 88 tokens if the coin comes up Heads, and 6 tokens if Tails.
+In the example decision below, if you choose Option 1, then you will receive 55 tokens if the coin comes up Heads, and will receive 15 tokens if the coin comes up Tails. If instead you choose Option 3, then you will receive 40 tokens if the coin comes up Heads, and 30 tokens if Tails. Likewise, if you choose Option 4, then you will receive 88 tokens if the coin comes up Heads, and 6 tokens if Tails.
 
 <br>
 <br>
