--- a/_static/templates/Complex_InstructionsPage2.html
+++ b/_static/templates/Complex_InstructionsPage2.html
@@ -10,9 +10,8 @@ Instructions II (Block {{block_number}} out of 3)
     <div class="card-body">
       <font size="4">
 
-Your overall payoff will depend on how many units you choose to allocate to each option, and also on the outcome of a virtual coin flip. 
-In the example below, if you choose to invest all 100 units in Option 1, then you would receive 100*100 = 10000 tokens if the coin comes up Heads, and would receive 0 units if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 units if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 units if the coin comes up Tails.
-The exchange rate is 100 units per 1 token.
+Your overall payoff will depend on how many units you choose to allocate to each option, and also on the outcome of a virtual coin flip. In the example below, if you choose to invest all 100 units in Option 1, then you would receive 100*100 = 10,000 tokens if the coin comes up Heads, and would receive 0 units if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 units if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 units if the coin comes up Tails. The exchange rate is 100 units per 1 token.
+
 
 <br>
 <br>
