--- a/_static/templates/TrivialDelegationDecision.html
+++ b/_static/templates/TrivialDelegationDecision.html
@@ -8,7 +8,7 @@
 <font size="4">
 <br>
 
- <b> Plese take the delegation decision: </b>
+ <b> Please take the delegation decision: </b>
 <table class="table">
     <tr>
         <td style="width:10%">
@@ -22,7 +22,7 @@
         <td style="width:10%">
         </td>
         <td>
-            To delegate, please select one of the investors below
+            To delegate, please select one of the investors below (costs 2 tokens = £0.1)
         </td>
     </tr>
     <tr>
