--- a/_static/templates/Trivial_DecisionScreen.html
+++ b/_static/templates/Trivial_DecisionScreen.html
@@ -48,7 +48,7 @@
 <div class="card bg-light">
 <font size="4">
     <div class="card-body">
-    Note that chance that this round will be chosen for payment is higher than usual (1 out of 3).
+    Note that chance that this round will be chosen for payment is higher than usual (1 in 3 instead of 1 in 12).
 </div>
 </font>
 </div>
