--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -178,7 +178,7 @@
 <div class="card bg-light">
 <font size="4">
     <div class="card-body">
-    Note that chance that this round will be chosen for payment is higher than usual (1 out of 3).
+    Note that chance that this round will be chosen for payment is higher than usual (1 in 3 instead of 1 in 12).
 </div>
 </font>
 </div>
@@ -230,9 +230,8 @@ The table on the decision screen shows how the payoff of each option depends on 
 
 <br><br>
 
-Your overall payoff will depend on how many units you choose to allocate to each option, and also on the outcome of a virtual coin flip. 
-In the example below, if you choose to invest all 100 units in Option 1, then you would receive 100*100 = 10000 tokens if the coin comes up Heads, and would receive 0 units if the coin comes up Tails. If you choose instead to invest 50 tokens in Option 2 and 50 tokens in Option 4, then you would receive 50*50+50*30 = 4000 units if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 units if the coin comes up Tails.
-The exchange rate is 100 units per 1 token.
+Your payoff each round will depend on how you choose to allocate 100 units among the available options, and also on the outcome of a virtual coin flip. In the example below, if you choose to allocate all 100 units in Option 1, then you would receive 100*100 = 10,000 mini-tokens = 100 tokens if the coin comes up Heads, and would receive 0 tokens if the coin comes up Tails. If you choose instead to invest 50 units in Option 2 and 50 units in Option 4, then you would receive 50*50+50*30 = 4000 mini-tokens = 40 tokens if the coin comes up Heads, and you would receive 50*10+50*14 = 1200 mini-tokens = 12 tokens  if the coin comes up Tails.
+
 
 <br><br>
 
