--- a/_static/templates/SimpleDelegationDecision.html
+++ b/_static/templates/SimpleDelegationDecision.html
@@ -115,7 +115,7 @@
         <div class="card-body" >
                 <font size="4">
 
-You now can select a previous investor and delegate the task to them, or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
+You now choose to either delegate the task to a previous investor or else you can continue making your own choices as in the previous four rounds. If you delegate to a previous investor, then the computer will automatically choose for you exactly the same asset as that investor chose in that round.
 
 <br><br>
 
