--- a/_static/templates/SimpleDelegationDecision.html
+++ b/_static/templates/SimpleDelegationDecision.html
@@ -88,7 +88,17 @@
 
 
 
-<br><br><br>
+<br><br>
+
+<div class="card bg-light">
+<font size="4">
+    <div class="card-body">
+    Note that chance that this round will be chosen for payment is higher than usual (1 in 3 instead of 1 in 12).
+</div>
+</font>
+</div>
+
+<br>
 
 <script>
     var flag =0;
